testdata/zkc/invalid/field_02.zkc
//error:3:13-14:expected type u32
fn f(x:u32, y:𝔽) -> (r:𝔽) {
    r = x + y
    return
}
